RESOLVED FIXED123923
Fix EFL build after r158753
https://bugs.webkit.org/show_bug.cgi?id=123923
Summary Fix EFL build after r158753
Sergio Correia (qrwteyrutiyoup)
Reported 2013-11-06 13:42:19 PST
Fix EFL build after r158753
Attachments
Patch (1.34 KB, patch)
2013-11-06 13:43 PST, Sergio Correia (qrwteyrutiyoup)
no flags
Sergio Correia (qrwteyrutiyoup)
Comment 1 2013-11-06 13:43:52 PST
Created attachment 216219 [details] Patch r158753 renamed WKNavigationData.h as WKNavigationDataRef.h, so update it in UIProcess/API/efl/ewk_navigation_data_private.h.
WebKit Commit Bot
Comment 2 2013-11-06 14:35:43 PST
Comment on attachment 216219 [details] Patch Clearing flags on attachment: 216219 Committed r158792: <http://trac.webkit.org/changeset/158792>
WebKit Commit Bot
Comment 3 2013-11-06 14:35:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.