Fix EFL build after r158753 https://bugs.webkit.org/show_bug.cgi?id=123923

r158753 renamed WKNavigationData.h as WKNavigationDataRef.h, so
update it in UIProcess/API/efl/ewk_navigation_data_private.h.

Patch by Sergio Correia <sergio.correia@openbossa.org> on 2013-11-06
Reviewed by Csaba Osztrogonác.

* UIProcess/API/efl/ewk_navigation_data_private.h:

Canonical link: https://commits.webkit.org/142110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158792 268f45cc-cd09-0410-ab3c-d52691b4dbfc